tests/baselines/reference/moduleAugmentationGlobal5(strict=true).errors.txt
f1.d.ts(3,30): error TS7008: Member 'x' implicitly has an 'any' type.
f2.d.ts(3,30): error TS7008: Member 'y' implicitly has an 'any' type.


==== f3.ts (0 errors) ====
    /// <reference path="f1.d.ts"/>
    /// <reference path="f2.d.ts"/>
    import "A";
    import "B";
    
    
==== f1.d.ts (1 errors) ====
    declare module "A" {
        global {
            interface Something {x}
                                 ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
        }
    }
==== f2.d.ts (1 errors) ====
    declare module "B" {
        global {
            interface Something {y}
                                 ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
        }
    }